fix: book update immutable list